--- a/ch12-06-writing-to-stderr-instead-of-stdout.html
+++ b/ch12-06-writing-to-stderr-instead-of-stdout.html
@@ -223,7 +223,7 @@ How dreary to be somebody!
 </code></pre>
 <p>這說明我們現在有對成功的輸出使用標準輸出，而且有妥善地將錯誤輸出傳至標準錯誤。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
-<p>本章節回顧了你目前所學的一些重要概念，並介紹了如何在 Rust 中進行常見的 I/O 操作。透過使用命令列引數、檔案、環境變數與用來印出錯誤的 <code>eprintln!</code> 巨集，你現在已經準備好能寫出命令列應用程式了。透過使用前幾張的概念，你的程式的組織架構會非常穩固、資料都能有效率地儲存至適當的資料結構、完善地處理錯誤，並通過測試檢驗。</p>
+<p>本章節回顧了你目前所學的一些重要概念，並介紹了如何在 Rust 中進行常見的 I/O 操作。透過使用命令列引數、檔案、環境變數與用來印出錯誤的 <code>eprintln!</code> 巨集，你現在已經準備好能寫出命令列應用程式了。透過使用前幾章的概念，你的程式的組織架構會非常穩固、資料都能有效率地儲存至適當的資料結構、完善地處理錯誤，並通過測試檢驗。</p>
 <p>接下來，我們要探討些 Rust 受到函式語言啟發的功能：閉包與疊代器。</p>
 <blockquote>
 <ul>
