--- a/print.html
+++ b/print.html
@@ -10426,7 +10426,7 @@ How dreary to be somebody!
 </code></pre>
 <p>這說明我們現在有對成功的輸出使用標準輸出，而且有妥善地將錯誤輸出傳至標準錯誤。</p>
 <h2><a class="header" href="#總結-11" id="總結-11">總結</a></h2>
-<p>本章節回顧了你目前所學的一些重要概念，並介紹了如何在 Rust 中進行常見的 I/O 操作。透過使用命令列引數、檔案、環境變數與用來印出錯誤的 <code>eprintln!</code> 巨集，你現在已經準備好能寫出命令列應用程式了。透過使用前幾張的概念，你的程式的組織架構會非常穩固、資料都能有效率地儲存至適當的資料結構、完善地處理錯誤，並通過測試檢驗。</p>
+<p>本章節回顧了你目前所學的一些重要概念，並介紹了如何在 Rust 中進行常見的 I/O 操作。透過使用命令列引數、檔案、環境變數與用來印出錯誤的 <code>eprintln!</code> 巨集，你現在已經準備好能寫出命令列應用程式了。透過使用前幾章的概念，你的程式的組織架構會非常穩固、資料都能有效率地儲存至適當的資料結構、完善地處理錯誤，並通過測試檢驗。</p>
 <p>接下來，我們要探討些 Rust 受到函式語言啟發的功能：閉包與疊代器。</p>
 <blockquote>
 <ul>
@@ -10581,7 +10581,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 13-4：提取 <code>simulated_expensive_calculation</code> 的呼叫到同個位置並用變數 <code>expensive_result</code> 儲存結果</span></p>
-<p>此變更統一了所有 <code>simulated_expensive_calculation</code> 的呼叫並解決第一個 <code>if</code> 區塊重複呼叫函式兩次的問題。不幸的是，現在我們一定得呼叫此函式並在所有行情形下都得等待，這包含沒有使用到此結果的 <code>if</code> 區塊。</p>
+<p>此變更統一了所有 <code>simulated_expensive_calculation</code> 的呼叫並解決第一個 <code>if</code> 區塊重複呼叫函式兩次的問題。不幸的是，現在我們一定得呼叫此函式並在所有情形下都得等待，這包含沒有使用到此結果的 <code>if</code> 區塊。</p>
 <p>我們想在程式某處定義程式碼，並在我們確實需要它時<strong>執行</strong>程式碼就好。這就是閉包能使用的場合！</p>
 <h4><a class="header" href="#透過閉包重構來儲存程式碼" id="透過閉包重構來儲存程式碼">透過閉包重構來儲存程式碼</a></h4>
 <p>與其在 <code>if</code> 區塊之前就呼叫 <code>simulated_expensive_calculation</code> 函式，我們可以定義一個閉包並將<strong>閉包</strong>存入變數中，而不是儲存函式呼叫的結果，如範例 13-5 所示。我們可以將 <code>simulated_expensive_calculation</code> 的本體移入這個閉包中。</p>
@@ -11052,7 +11052,7 @@ To learn more, run the command again with --verbose.
 </ul>
 </blockquote>
 <h2><a class="header" href="#使用疊代器來處理一系列的項目" id="使用疊代器來處理一系列的項目">使用疊代器來處理一系列的項目</a></h2>
-<p>疊代器（Iterator）模式讓你可以對 一個項目序列依序進行某些任務。一個疊代器負責遍歷序每個項目以及序列何時結束的邏輯。當你使用疊代器，你不需要自己實作這些邏輯。</p>
+<p>疊代器（Iterator）模式讓你可以對一個項目序列依序進行某些任務。一個疊代器負責遍歷序每個項目以及序列何時結束的邏輯。當你使用疊代器，你不需要自己實作這些邏輯。</p>
 <p>在 Rust 中疊代器是<strong>惰性</strong>（lazy）的，代表除非你呼叫方法來使用疊代器，不然它們不會有任何效果。舉例來說，範例 13-13 的程式碼會透過 <code>Vec&lt;T&gt;</code> 定義的方法 <code>iter</code> 從向量<code>v1</code> 建立一個疊代器來遍歷它的項目。此程式碼本身沒有啥實用之處。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let v1 = vec![1, 2, 3];
