--- a/ch01-01-installation.html
+++ b/ch01-01-installation.html
@@ -179,7 +179,7 @@
 <p>以下步驟將會安裝最新的穩定版 Rust 編譯器。Rust 的穩定性能確保本書的所有範例在更新的 Rust 版本仍然能繼續編譯出來。輸出的結果可能會在不同版本間而有些微的差異，因為 Rust 時常會改善錯誤與警告訊息。換句話說，任何你所安裝的最新穩定版 Rust 都應該能夠正常運行本書的內容。</p>
 <blockquote>
 <h3><a class="header" href="#命令列標記" id="命令列標記">命令列標記</a></h3>
-<p>在本章節到整本書為止，我們講會顯示一些終端機會用到的命令。任一你會用到的命令都會始於 <code>$</code>。但你不需要去輸入 <code>$</code>，因為這通常代表每一命令列的起始位置。而沒有出現 <code>$</code> 的行數，通常則代表前一行命列輸出的結果。除此之外，針對 PowerShell 的範例則將會使用 <code>&gt;</code> 而不是 <code>$</code>。</p>
+<p>在本章節到整本書為止，我們將會顯示一些終端機會用到的命令。任一你會用到的命令都會始於 <code>$</code>。但你不需要去輸入 <code>$</code>，因為這通常代表每一命令列的起始位置。而沒有出現 <code>$</code> 的行數，通常則代表前一行命列輸出的結果。除此之外，針對 PowerShell 的範例則將會使用 <code>&gt;</code> 而不是 <code>$</code>。</p>
 </blockquote>
 <h3><a class="header" href="#在-linux-或-macos-上安裝-rustup" id="在-linux-或-macos-上安裝-rustup">在 Linux 或 macOS 上安裝 <code>rustup</code></a></h3>
 <p>如果你使用的是 Linux 或 macOS，請開啟終端機然後輸入以下命令：</p>
