--- a/ch13-03-improving-our-io-project.html
+++ b/ch13-03-improving-our-io-project.html
@@ -623,7 +623,7 @@
 </span><span class="boring">}
 </span></code></pre>
 <p><span class="caption">範例 13-28：範例 12-19 的 <code>search</code> 函式實作</span></p>
-<p>我們可以使用疊代配接器（iterator adapto）方法讓此程式碼更精簡。這樣做也能避免我們產生過程中的 <code>results</code> 可變向量。函式程式設計風格傾向於最小化可變狀態的數量使程式碼更加簡潔。移除可變狀態還在未來有機會讓搜尋可以平行化，因為我們不需要去管理 <code>results</code> 向量的並行存取。範例 13-29 展示了此改變：</p>
+<p>我們可以使用疊代配接器（iterator adaptor）方法讓此程式碼更精簡。這樣做也能避免我們產生過程中的 <code>results</code> 可變向量。函式程式設計風格傾向於最小化可變狀態的數量使程式碼更加簡潔。移除可變狀態還在未來有機會讓搜尋可以平行化，因為我們不需要去管理 <code>results</code> 向量的並行存取。範例 13-29 展示了此改變：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore"><span class="boring">use std::env;
 </span><span class="boring">use std::error::Error;
