--- a/print.html
+++ b/print.html
@@ -11850,7 +11850,7 @@ fn main() {}
 </span><span class="boring">}
 </span></code></pre>
 <p><span class="caption">範例 13-28：範例 12-19 的 <code>search</code> 函式實作</span></p>
-<p>我們可以使用疊代配接器（iterator adapto）方法讓此程式碼更精簡。這樣做也能避免我們產生過程中的 <code>results</code> 可變向量。函式程式設計風格傾向於最小化可變狀態的數量使程式碼更加簡潔。移除可變狀態還在未來有機會讓搜尋可以平行化，因為我們不需要去管理 <code>results</code> 向量的並行存取。範例 13-29 展示了此改變：</p>
+<p>我們可以使用疊代配接器（iterator adaptor）方法讓此程式碼更精簡。這樣做也能避免我們產生過程中的 <code>results</code> 可變向量。函式程式設計風格傾向於最小化可變狀態的數量使程式碼更加簡潔。移除可變狀態還在未來有機會讓搜尋可以平行化，因為我們不需要去管理 <code>results</code> 向量的並行存取。範例 13-29 展示了此改變：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore"><span class="boring">use std::env;
 </span><span class="boring">use std::error::Error;
@@ -13046,7 +13046,7 @@ CustomSmartPointers 建立完畢。
 </code></pre>
 <p>當我們的實例離開作用域時，Rust 會自動呼叫 <code>drop</code>，呼叫我們指定的程式碼。變數會以與建立時相反的順序被釋放，所以 <code>d</code> 會在 <code>c</code> 之前被釋放。此範例給了我們一個觀察 <code>drop</code> 如何執行的視覺化指引，通常你會指定該型別所需的清除程式碼，而不是印出訊息。</p>
 <h3><a class="header" href="#透過-stdmemdrop-提早釋放數值" id="透過-stdmemdrop-提早釋放數值">透過 <code>std::mem::drop</code> 提早釋放數值</a></h3>
-<p>不幸的是，我們無法值接了當地取消自動 <code>drop</code> 的功能。停用 <code>drop</code> 通常是不必要的，整個 <code>Drop</code> 的目的本來就是要能自動處理。不過有些時候你可能會想要提早清除數值。其中一個例子是使用智慧指標來管理鎖：你可能會想要強制呼叫 <code>drop</code> 方法來釋放鎖，好讓作用域中的其他程式碼可以取得該鎖。Rust 不會讓你手動呼叫 <code>Drop</code> 特徵的 <code>drop</code> 方法。不過如果你想要一個數值在離開作用域前就被釋放的話，你可以使用標準函式庫提供的 <code>std::mem::drop</code> 函式來呼叫。</p>
+<p>不幸的是，我們無法直接了當地取消自動 <code>drop</code> 的功能。停用 <code>drop</code> 通常是不必要的，整個 <code>Drop</code> 的目的本來就是要能自動處理。不過有些時候你可能會想要提早清除數值。其中一個例子是使用智慧指標來管理鎖：你可能會想要強制呼叫 <code>drop</code> 方法來釋放鎖，好讓作用域中的其他程式碼可以取得該鎖。Rust 不會讓你手動呼叫 <code>Drop</code> 特徵的 <code>drop</code> 方法。不過如果你想要一個數值在離開作用域前就被釋放的話，你可以使用標準函式庫提供的 <code>std::mem::drop</code> 函式來呼叫。</p>
 <p>如果我們嘗試修改範例 15-14 的 <code>main</code> 函式來手動呼叫 <code>Drop</code> 特徵的 <code>drop</code> 方法，如範例 15-15 所示，我們會得到編譯錯誤：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">struct CustomSmartPointer {
@@ -13131,7 +13131,7 @@ CustomSmartPointer 在 main 結束前就被釋放了。
 </ul>
 </blockquote>
 <h2><a class="header" href="#rct-引用計數智慧指標" id="rct-引用計數智慧指標"><code>Rc&lt;T&gt;</code> 引用計數智慧指標</a></h2>
-<p>在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。</p>
+<p>在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在圖資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。</p>
 <p>要有多重所有權的話，Rust 有一個型別叫做 <code>Rc&lt;T&gt;</code>，這是<strong>引用計數</strong>（reference counting）的簡寫。<code>Rc&lt;T&gt;</code> 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因為不會產生任何無效引用。</p>
 <p>想像 <code>Rc&lt;T&gt;</code> 是個在客廳裡的電視，當有人進入客廳要看電視時，它們就會打開它。其他人也能進來觀看電視。當最後一個人離開客廳時，它們會關掉電視，因為沒有任何人會再看了。如果當其他人還在看電視時，有人關掉了它，其他在看電視的人肯定會生氣。</p>
 <p><code>Rc&lt;T&gt;</code> 型別的使用時機在於當我們想要在堆積上分配一些資料給程式中數個部分讀取，但是我們無法在編譯時期決定哪個部分會最後一個結束使用數值的部分。如果我們知道哪個部分會最後結束的話，我們可以將那個部分作為資料的擁有者就好，然後正常的所有權規則就會在編譯時生效。</p>
