--- a/print.html
+++ b/print.html
@@ -14924,7 +14924,7 @@ impl Draw for SelectBox {
 </span><span class="boring">fn main() {}
 </span></code></pre>
 <p><span class="caption">範例 17-8：別的 crate 使用 <code>gui</code> 來對 <code>SelectBox</code> 結構體實作 <code>Draw</code> 特徵</span></p>
-<p>我們的函式庫使用者現在可以在他們的 <code>main</code> 建立個 <code>Screen</code> 實例。在 <code>Screen</code> 實例中，他們可以透過將 <code>SelectBox</code> 會 <code>Button</code> 放入 <code>Box&lt;T&gt;</code> 來成為特徵物件並加入元件中。他們接著就可以對 <code>Screen</code> 實例呼叫 <code>run</code> 方法，這會呼叫每個元件的 <code>draw</code> 方法。如範例 17-9 所示：</p>
+<p>我們的函式庫使用者現在可以在他們的 <code>main</code> 建立個 <code>Screen</code> 實例。在 <code>Screen</code> 實例中，他們可以透過將 <code>SelectBox</code> 和 <code>Button</code> 放入 <code>Box&lt;T&gt;</code> 來成為特徵物件並加入元件中。他們接著就可以對 <code>Screen</code> 實例呼叫 <code>run</code> 方法，這會呼叫每個元件的 <code>draw</code> 方法。如範例 17-9 所示：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore"><span class="boring">use gui::Draw;
 </span><span class="boring">
@@ -15724,11 +15724,11 @@ fn main() {
 </code></pre></pre>
 <p><span class="caption">範例 18-1：混合 <code>if let</code>、<code>else if</code>、<code>else if let</code> 與 <code>else</code></span></p>
 <p>如果使用者指定的最喜歡的顏色，該顏色就是背景顏色。如果今天是星期二，背景顏色就是綠色。如果使用者用字串指定他們的年齡且可以成功轉換成數字的話，背景顏色依據數字結果就是紫色或橘色。如果以上條件都不符合的話，背景顏色就是藍色。</p>
-<p>這樣的條件結構讓我們可以支援複雜的需求。透過我們在此寫死的數值，此例會印出 <code>Using purple as the background color</code>。</p>
-<p>你可以看到 <code>if let</code> 也能如同 <code>match</code> 的分支一樣遮蔽變數，<code>if let Ok(age) = age</code> 這行就產生了新的遮蔽變數 <code>age</code> 來包含 <code>Ok</code> 變體內的數值。這意味著我們需要將 <code>if age &gt; 30</code> 的條件方在區塊內，我們不能組合這兩個條件成 <code>if let Ok(age) = age &amp;&amp; age &gt; 30</code>。遮蔽的 <code>age</code> 在大括號開始之後的新作用域才有效，此時才能與 30 做比較。</p>
+<p>這樣的條件結構讓我們可以支援複雜的需求。透過我們在此寫死的數值，此例會印出 <code>使用紫色作為背景顏色</code>。</p>
+<p>你可以看到 <code>if let</code> 也能如同 <code>match</code> 的分支一樣遮蔽變數，<code>if let Ok(age) = age</code> 這行就產生了新的遮蔽變數 <code>age</code> 來包含 <code>Ok</code> 變體內的數值。這意味著我們需要將 <code>if age &gt; 30</code> 的條件放在區塊內，我們不能組合這兩個條件成 <code>if let Ok(age) = age &amp;&amp; age &gt; 30</code>。遮蔽的 <code>age</code> 在大括號開始之後的新作用域才有效，此時才能與 30 做比較。</p>
 <p>使用 <code>if let</code> 表達式的缺點是編譯器不會徹底檢查，而 <code>match</code> 表達式則會。如果我們省略最後一個 <code>else</code> 區塊而因此忘了處理一些情況，編譯器不會警告我們這種可能的邏輯錯誤。</p>
 <h3><a class="header" href="#while-let-條件迴圈" id="while-let-條件迴圈"><code>while let</code> 條件迴圈</a></h3>
-<p>與 <code>if let</code> 的結構類似，<code>while let</code> 條件迴圈允許 <code>while</code> 迴圈只要在模式持續配對符合的情況下一直執行。範例 18-2 的例子展示一個 <code>while let</code> 迴圈使用向量最為堆疊，並以數值被插入向量時相反的順序印出它們。</p>
+<p>與 <code>if let</code> 的結構類似，<code>while let</code> 條件迴圈允許 <code>while</code> 迴圈只要在模式持續配對符合的情況下一直執行。範例 18-2 的例子展示一個 <code>while let</code> 迴圈使用向量做為堆疊，並以數值被插入向量時相反的順序印出它們。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut stack = Vec::new();
 
@@ -15844,7 +15844,7 @@ fn main() {
 <h2><a class="header" href="#可反駁性何時模式可能會配對失敗" id="可反駁性何時模式可能會配對失敗">可反駁性：何時模式可能會配對失敗</a></h2>
 <p>模式有兩種形式：可反駁的（refutable）與不可反駁的（irrefutable）。可以配對任何可能數值的模式屬於<strong>不可反駁的（irrefutable）</strong>。其中一個例子就是陳述式 <code>let x = 5;</code> 中的 <code>x</code>，因為 <code>x</code> 可以配對任何數值，因此不可能會配對失敗。而可能會對某些數值配對失敗的模式則屬於<strong>可反駁的（refutable）</strong>。其中一個例子是表達式 <code>if let Some(x) = a_value</code> 中的 <code>Some(x)</code>，因為如果 <code>a_value</code> 變數中的數值為 <code>None</code> 而非 <code>Some</code> 的話， <code>Some(x)</code> 模式就會配對失敗。</p>
 <p>函式參數、<code>let</code> 陳述式與 <code>for</code> 迴圈只能接受不可反駁的模式，當數值無法配對時，程式無法作出任何有意義的事。<code>if let</code> 與 <code>while let</code> 表達式接受可反駁與不可反駁的模式，但是編譯器會警告不可反駁的模式，因為定義上來說它們用來處理可能會失敗的場合，條件表達式的功能就是依據成功或失敗來執行不同動作。</p>
-<p>大致上來說，你通常不需要擔心可反駁與不可反駁模式之間的區別，不過你會需要熟悉可反駁性這樣的概念，所以當你看到錯誤訊息時，能及時反應理解。在這樣的場合，你需要依據程式碼的預期行外來改變模式或是使用模式的結構。</p>
+<p>大致上來說，你通常不需要擔心可反駁與不可反駁模式之間的區別，不過你會需要熟悉可反駁性這樣的概念，所以當你看到錯誤訊息時，能及時反應理解。在這樣的場合，你需要依據程式碼的預期行為來改變模式或是使用模式的結構。</p>
 <p>讓我們看看當我們嘗試在 Rust 要求不可反駁模式的地方使用可反駁模式的範例與其反例。範例 18-8 顯示了一個 <code>let</code> 陳述式，但是我們指定的模式是 <code>Some(x)</code>，這是可反駁模式。如我們所預期的，此程式碼無法編譯。</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span><span class="boring">    let some_option_value: Option&lt;i32&gt; = None;
