deploy: 7d77d7f32ca7a15a753bfc75eb815efc28b67aa7

--- a/ch03-05-control-flow.html
+++ b/ch03-05-control-flow.html
@@ -240,7 +240,7 @@ error: could not compile `branches`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>錯誤訊息告訴我們 Rust 預期收到 <code>bool</code> 但是卻拿到整數。這和 Ruby 和 JavaScript 就不同，Rust 不會自動將非布林值型別轉換成布林值。你永遠必須顯式提供布林值給 <code>if</code> 作為它的條件判斷。舉例來說，如果我們希望 <code>if</code> 只會在數值為 <code>0</code> 才執行，我們可以將 <code>if</code> 表達式改成以下範例：</p>
+<p>錯誤訊息告訴我們 Rust 預期收到 <code>bool</code> 但是卻拿到整數。這和 Ruby 和 JavaScript 就不同，Rust 不會自動將非布林值型別轉換成布林值。你永遠必須顯式提供布林值給 <code>if</code> 作為它的條件判斷。舉例來說，如果我們希望 <code>if</code> 只會在數值不為 <code>0</code> 才執行，我們可以將 <code>if</code> 表達式改成以下範例：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let number = 3;
