deploy: 490821d6a77a8c0c9a4f85ae6133448125aef379

--- a/ch05-03-method-syntax.html
+++ b/ch05-03-method-syntax.html
@@ -303,7 +303,7 @@ rect1 能容納 rect3 嗎？false
 <p><span class="caption">範例 5-15：在 <code>Rectangle</code> 中實作了取得其他 <code>Rectangle</code> 作為參數的 <code>can_hold</code> 方法</span></p>
 <p>當我們用範例 5-14 的 <code>main</code> 函式執行此程式碼的話，我們會得到預期的輸出結果。方法可以在參數 <code>self</code> 之後接收更多參數，而那些參數就和函式中的參數用法一樣。</p>
 <h3><a class="header" href="#關聯函式" id="關聯函式">關聯函式</a></h3>
-<p><code>impl</code> 區塊另一個實用的功能是，我們允許在 <code>impl</code> 內定義函式且無需以 <code>self</code> 作為參數。這叫叫做<strong>關聯函式（associated functions）</strong>，因為它們與結構體是相關的。它們仍然是函式而非方法，因為它們沒有用到結構體的實例。你已經用到了 <code>String::from</code> 此關聯函式。</p>
+<p><code>impl</code> 區塊另一個實用的功能是，我們允許在 <code>impl</code> 內定義函式且無需以 <code>self</code> 作為參數。這叫做<strong>關聯函式（associated functions）</strong>，因為它們與結構體是相關的。它們仍然是函式而非方法，因為它們沒有用到結構體的實例。你已經用到了 <code>String::from</code> 此關聯函式。</p>
 <p>關聯函式很常用作建構子，來產生新的結構體實例。舉例來說，我們可以提供一個只接收一個維度作為參數的關聯函式，讓它賦值給寬度與長度，讓我們可以用 <code>Rectangle</code> 來產生正方形，而不必提供兩次相同的值：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#[derive(Debug)]
