--- a/ch08-00-common-collections.html
+++ b/ch08-00-common-collections.html
@@ -175,7 +175,8 @@
 <p>Rust 的標準函式庫提供一些非常實用的資料結構稱之為<strong>集合（collections）</strong>。多數其他資料型別只會呈現一個特定數值，但是集合可以包含數個數值。不像內建的陣列與元組型別，這些集合指向的資料位於堆積上，代表資料的數量不必在編譯期就知道，而且可以隨著程式執行增長或縮減。每種集合都有不同的能力以及消耗，依照你的情形選擇適當的集合，是一項你會隨著開發時間漸漸掌握的技能。在本章節我們會介紹三種在 Rust 程式中十分常用的集合：</p>
 <ul>
 <li><strong>向量</strong>（Vector）允許你接二連三地儲存數量不定的數值。</li>
-<li><strong>字串</strong>（String）是字元的集合。我們在之前就提過 <code>String</code> 型別，本章會正式深入介紹。這是從一種通用資料結構 <em>map</em> 衍生出來的特定實作。</li>
+<li><strong>字串</strong>（String）是字元的集合。我們在之前就提過 <code>String</code> 型別，本章會正式深入介紹。</li>
+<li><strong>雜湊映射</strong>（Hash map）允許你將值（value）與特定的鍵（key）相關聯。這是從一種更通用的資料結構<strong>映射</strong>（map）衍生出來的特定實作。</li>
 </ul>
 <p>想瞭解更多標準函式庫提供的集合種類的話，歡迎查閱<a href="https://doc.rust-lang.org/std/collections/index.html">技術文件</a>。</p>
 <p>我們將討論如何建立與更新向量、字串與雜湊映射，以及它們的所長。</p>
