deploy: 33d8447ebec70c3492fa6f538028333b4e41130f

--- a/print.html
+++ b/print.html
@@ -1394,7 +1394,7 @@ x 的數值為：12
     spaces = spaces.len();
 <span class="boring">}
 </span></code></pre>
-<p>此錯誤訊息告訴我們我們不與許改變變數的型別：</p>
+<p>此錯誤訊息告訴我們我們不允許改變變數的型別：</p>
 <pre><code class="language-console">$ cargo run
    Compiling variables v0.1.0 (file:///projects/variables)
 error[E0308]: mismatched types
